fixed frontend bugs (tooltip location, variant area gap)

--- a/mango-cli/src/main/webapp/stylesheets/main.css
+++ b/mango-cli/src/main/webapp/stylesheets/main.css
@@ -97,7 +97,7 @@ div.tooltip {
   border: 0px;
   pointer-events: none;
   color: white;
-  margin-top: 50px; }
+  margin-top: 70px; }
   div.tooltip p {
     margin: 0px; }
 
